# text-components-rs

./: Cargo.toml  README.md  build.rs
examples/: main.rs  nbt.rs  serde.rs  snbt.rs
src/: build.rs  content.rs  custom.rs  fmt.rs  format.rs  interactivity.rs  lib.rs  minimessage.rs  minimessage_tests.rs  nbt.rs  parse.rs  resolving.rs  translation.rs
src/parse/: mod.rs  nbt.rs
