[package]
name = "text_components"
version = "0.1.0"
edition = "2024"

[lib]

[features]
custom = []
nbt = ["dep:simdnbt"]
serde = ["dep:serde"]

[dependencies]
colored = "3.0.0"
rand = { version = "0.9.2", default-features = false, features = [
    "os_rng",
    "std",
    "thread_rng",
] }
serde = { version = "1.0.228", features = ["derive"], optional = true }
simdnbt = { version = "0.9.0", optional = true }

[dev-dependencies]
chrono = "0.4.42"
serde_json = "1.0.148"

[build-dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.104"
quote = "1.0.42"
rustc-hash = "2.1.1"
serde_json = "1.0.148"
